Adicionado página de ADM e criando página de ADS

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     
     <ul>
         <li>
-            <a href="">Admistração</a>
+            <a href="./cursos/adm.html" target="_blank">Admistração</a>
         </li>
         <li>
             <a href="">Análise e Desenvolvimento de Software</a>
