Adicionado Curso de banco de Dados

--- a/index.html
+++ b/index.html
@@ -20,34 +20,34 @@
             <a href="./cursos/adm.html" target="_blank">Admistração</a>
         </li>
         <li>
-            <a href="">Análise e Desenvolvimento de Software</a>
+            <a href="./cursos/ads.html" target="_blank">Análise e Desenvolvimento de Software</a>
         </li>
         <li>
-            <a href="">Banco de Dados</a>
+            <a href="./cursos/bd.html" target="_blank">Banco de Dados</a>
         </li>
         <li>
-            <a href="">Engenharia de Computação</a>
+            <a href="" target="_blank">Engenharia de Computação</a>
         </li>
         <li>
-            <a href="">Engenharia de Produção</a>
+            <a href="" target="_blank">Engenharia de Produção</a>
         </li>
         <li>
-            <a href="">Engenharia Mecatrônica</a>
+            <a href="" target="_blank">Engenharia Mecatrônica</a>
         </li>
         <li>
-            <a href="">Gestão de Tecnologia da Informação</a>
+            <a href="" target="_blank">Gestão de Tecnologia da Informação</a>
         </li>
         <li>
-            <a href="">Jogos Digitais</a>
+            <a href="" target="_blank">Jogos Digitais</a>
         </li>
         <li>
-            <a href="">Sistema de Informação</a>
+            <a href="" target="_blank">Sistema de Informação</a>
         </li>
         <li>
-            <a href="">Sistema para Internet</a>
+            <a href="" target="_blank">Sistema para Internet</a>
         </li>
         <li>
-            <a href="">Rede de Computadores</a>
+            <a href="" target="_blank">Rede de Computadores</a>
         </li>
     </ul>
 </body>
