--- a/cursos/ads.html
+++ b/cursos/ads.html
@@ -7,6 +7,16 @@
     <title>Análise e Desenvolvimento de Software</title>
 </head>
 <body>
-    
+    <h1>Análise e Desenvolvimento de Software</h1>
+    <h2>O Curso</h2>
+    <p>Você vai aprender a identificar as necessidades estruturais de um sistema, documentar, criar protótipos e desenvolver
+        para web e mobile utilizando os principais softwares, ferramentas e metodologias do mercado, além de ser capaz de
+        gerenciar projetos e controlar a qualidade de programas.
+        Você vai desenvolver sistemas de alta qualidade e produtividade para web e mobile nas linguagens de programação
+        Java, .NET, Android e Apple iOS, bem como integrar estas plataformas entre si e com outras, tal como Mainframe e
+        SAP.
+    </p>
+
+    <a href="./adm.html">Curso Anterior</a> | <a href="../index.html">Página Inicial</a> | <a href="./bd.html">Próximo Curso</a>
 </body>
 </html>
