--- a/cursos/bd.html
+++ b/cursos/bd.html
@@ -21,6 +21,6 @@
         Através do conceito de Big Data, organize as fontes de dados e utilize-as obtendo insights que embasem as
         corporações para a melhoria da operação do seu negócio.</p>
 
-        <a href="./ads.html">Curso Anterior</a> | <a href="../index.html">Página Inicial</a> | <a href="">Próximo Curso</a>
+        <a href="./ads.html">Curso Anterior</a> | <a href="../index.html">Página Inicial</a> | <a href="./engcomp.html" target="_blank">Próximo Curso</a>
 </body>
 </html>
