--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <a href="./cursos/bd.html" target="_blank">Banco de Dados</a>
         </li>
         <li>
-            <a href="" target="_blank">Engenharia de Computação</a>
+            <a href="./cursos/engcomp.html" target="_blank">Engenharia de Computação</a>
         </li>
         <li>
             <a href="" target="_blank">Engenharia de Produção</a>
