--- a/cursos/adm.html
+++ b/cursos/adm.html
@@ -18,6 +18,6 @@ gestão de TI.
 Você será capaz de apoiar e conduzir os principais planos de uma empresa em cenários dinâmicos, competitivos e
 tecnológicos.</p>
 
-<a href="">Curso anterior</a> | <a href="../index.html">Página Inicial</a> | <a href="./ads.html">Próximo Curso</a>
+<a href="">Curso anterior</a> | <a href="../index.html">Página Inicial</a> | <a href="./ads.html" target="_blank">Próximo Curso</a>
 </body>
 </html>
