--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <a href="./cursos/engcomp.html" target="_blank">Engenharia de Computação</a>
         </li>
         <li>
-            <a href="" target="_blank">Engenharia de Produção</a>
+            <a href="./cursos/engprod.html" target="_blank">Engenharia de Produção</a>
         </li>
         <li>
             <a href="" target="_blank">Engenharia Mecatrônica</a>
