--- a/cursos/engprod.html
+++ b/cursos/engprod.html
@@ -18,6 +18,6 @@
         eletrônica e tecnologia, com impressoras 3D, usinagem, cortadoras laser e fresadoras de precisão.
     </p>
 
-    <a href="./engcomp.html">Curso Anterior</a> | <a href="../index.html">Página Inicial</a> | <a href="" target="_blank">Próximo Curso</a>
+    <a href="./engcomp.html">Curso Anterior</a> | <a href="../index.html">Página Inicial</a> | <a href="./engmeca.html" target="_blank">Próximo Curso</a>
 </body>
 </html>
