--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <a href="./cursos/engmeca.html" target="_blank">Engenharia Mecatrônica</a>
         </li>
         <li>
-            <a href="" target="_blank">Gestão de Tecnologia da Informação</a>
+            <a href="./cursos/gest-ti.html" target="_blank">Gestão de Tecnologia da Informação</a>
         </li>
         <li>
             <a href="" target="_blank">Jogos Digitais</a>
