Terminado pagima jogos digitais

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <a href="./cursos/gest-ti.html" target="_blank">Gestão de Tecnologia da Informação</a>
         </li>
         <li>
-            <a href="" target="_blank">Jogos Digitais</a>
+            <a href="./cursos/gamedigital.html" target="_blank">Jogos Digitais</a>
         </li>
         <li>
             <a href="" target="_blank">Sistema de Informação</a>
