Paginas finais finalizadas

--- a/cursos/gamedigital.html
+++ b/cursos/gamedigital.html
@@ -22,6 +22,6 @@
         de empresas que desenvolvem jogos.
     </p>
 
-    <a href="./gest-ti.html">Curso Anterior</a> | <a href="../index.html">Página Inicial</a> | <a href="" target="_blank">Próximo Curso</a>
+    <a href="./gest-ti.html">Curso Anterior</a> | <a href="../index.html">Página Inicial</a> | <a href="./si.html" target="_blank">Próximo Curso</a>
 </body>
 </html>
