--- a/cursos/gest-ti.html
+++ b/cursos/gest-ti.html
@@ -12,6 +12,6 @@
     <p>Você vai planejar e gerenciar sistemas computacionais (hardware) e de informação (software) nas áreas de processos,
         mobilidade, segurança, tecnologias emergentes, sistemas integrados, big data, cloud computing, engenharia de
         software, marketing digital e redes sociais.</p>
-    <a href="./engmeca.html">Curso Anterior</a> | <a href="../index.html">Página Inicial</a> | <a href="" target="_blank">Próximo Curso</a>
+    <a href="./engmeca.html">Curso Anterior</a> | <a href="../index.html">Página Inicial</a> | <a href="./gamedigital.html" target="_blank">Próximo Curso</a>
 </body>
 </html>
