--- a/index.html
+++ b/index.html
@@ -41,13 +41,13 @@
             <a href="./cursos/gamedigital.html" target="_blank">Jogos Digitais</a>
         </li>
         <li>
-            <a href="" target="_blank">Sistema de Informação</a>
+            <a href="./cursos/si.html" target="_blank">Sistema de Informação</a>
         </li>
         <li>
-            <a href="" target="_blank">Sistema para Internet</a>
+            <a href="./cursos/sisinternet.html" target="_blank">Sistema para Internet</a>
         </li>
         <li>
-            <a href="" target="_blank">Rede de Computadores</a>
+            <a href="./cursos/redecomp.html" target="_blank">Rede de Computadores</a>
         </li>
     </ul>
 </body>
