adicionando imagens aos cursos

--- a/cursos/engcomp.html
+++ b/cursos/engcomp.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <h1>Engenharia da Computação</h1>
+    <img src="../img/engcomp.jpg" alt="Imagem eng da Computação" width="300px">
     <h2>O Curso</h2>
     <p><strong>O ENGENHEIRO DA COMPUTAÇÃO</strong> desenvolve projetos nas áreas de sistemas operacionais, arquitetura de
         computadores, redes, robótica e inteligência artificial.
