--- a/cursos/adm.html
+++ b/cursos/adm.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <h1>Administração</h1>
+    <img src="../img/administração.jpg" alt="imagem administração" width="300px">
     <h2>O Curso</h2>
     <p><strong>A FIAP tem o melhor curso de Administração de São Paulo</strong>, primeiro colocado no ENADE. Isso é consequência de um
 ambiente de excelência em tecnologia, inovação e empreendedorismo, que desperta nos alunos o pensamento crítico,
