--- a/cursos/ads.html
+++ b/cursos/ads.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <h1>Análise e Desenvolvimento de Software</h1>
+    <img src="../img/ads.jpg" alt="Imagem ads" width="300px">
     <h2>O Curso</h2>
     <p>Você vai aprender a identificar as necessidades estruturais de um sistema, documentar, criar protótipos e desenvolver
         para web e mobile utilizando os principais softwares, ferramentas e metodologias do mercado, além de ser capaz de
