--- a/cursos/bd.html
+++ b/cursos/bd.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <h1>Banco de Dados</h1>
+    <img src="../img/bd.jpg" alt="imagem banco de dados" width="300px">
     <h2>O Curso</h2>
     <p>Tecnologia em Banco de Dados prepara você para entender e utilizar melhor os dados, criando soluções inovadoras a
         partir de um fluxo de conteúdo monitorado e analisado.
