--- a/cursos/engmeca.html
+++ b/cursos/engmeca.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <h1>Engenharia Mecatrônica</h1>
+    <img src="../img/img_mecatronica.jpg" alt="imagem engenharia Mecatrônica" width="300px">
     <h2>O Curso</h2>
     <p>É uma das profissões mais promissoras do mercado, tanto em época de crise como em momentos positivos da
         economia. Para ganhar competitividade, toda empresa precisa desenvolver e implantar sistemas automatizados,
