--- a/cursos/engprod.html
+++ b/cursos/engprod.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <h1>Engenharia da Produção</h1>
+    <img src="../img/engenharia-de-producao.png" alt="imagem Engenharia de Produção" width="300px">
     <h2>O Curso</h2>
     <p><strong>O ENGENHEIRO DE PRODUÇÃO</strong> reúne conhecimentos das áreas de administração, economia e engenharia. O curso
         foi planejado para incorporar a influência de ferramentas tecnológicas, indispensáveis para gestão de negócios.
