--- a/cursos/gest-ti.html
+++ b/cursos/gest-ti.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <h1>Gestão de Tecnologia da Informação</h1>
+    <img src="../img/gest-ti.jpg" alt="imagem gest-ti" width="300px">
     <h2>O Curso</h2>
     <p>Você vai planejar e gerenciar sistemas computacionais (hardware) e de informação (software) nas áreas de processos,
         mobilidade, segurança, tecnologias emergentes, sistemas integrados, big data, cloud computing, engenharia de
