--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Cursos FIAP</title>
 </head>
 <body>
+    <img src="./img/fiap.jpg" alt="Logo FIAP" width="200px">
     <h1>FIAP o novo está aqui</h1>
     <p>A FIAP é o centro de excelência em tecnologia mais respeitado do país. Uma história que vem sendo construída dia
         após dia, estimulando mentes a vivenciarem a inovação e o empreendedorismo. Porque a FIAP acredita no poder
