--- a/cursos/gamedigital.html
+++ b/cursos/gamedigital.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <h1>Jogos Digitais</h1>
+    <img src="../img/jogosdigitais.png" alt="" width="300px">
     <h2>O Curso</h2>
     <p>Você vai ser preparado para desenvolver jogos em todas as plataformas: internet, consoles (Playstation, Xbox e
         Nintendo), smartphones (aplicativos para celulares e tablets), desktops (PC e Mac), TV digital, simuladores de realidade
