--- a/cursos/si.html
+++ b/cursos/si.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <h1>Sistema da Informação</h1>
+    <img src="../img/sistema-de-informacao.jpg" alt="" width="300px">
     <h2>O Curso</h2>
     <p><strong>O BACHAREL EM SISTEMAS DE INFORMAÇÃO</strong>recebe uma visão ampla das organizações e seus modelos de negócio
         e de como a tecnologia pode amplificar sua estratégia.
