Finalizado a adição de imagens dos respectivos cursos

--- a/cursos/redecomp.html
+++ b/cursos/redecomp.html
@@ -1,13 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rede de Computadores</title>
 </head>
+
 <body>
     <h1>Rede de Computadores</h1>
+    <img src="../img/rede-de-computadores.jpg" alt="Rede de computadores" width="300px">
     <h2>O Curso</h2>
     <p>É ministrado em um ambiente que simula uma empresa real, com computadores (SO Linux e Windows), roteadores,
         switches, cabeamento e demais equipamentos, trazendo a vivência que você precisa para ser competitivo no mercado
@@ -20,6 +23,8 @@
         segurança.
     </p>
 
-    <a href="./sisinternet.html">Curso Anterior</a> | <a href="../index.html">Página Inicial</a> | <a href="">Próximo Curso</a>
+    <a href="./sisinternet.html">Curso Anterior</a> | <a href="../index.html">Página Inicial</a> | <a href="">Próximo
+        Curso</a>
 </body>
+
 </html>
