--- a/cursos/sisinternet.html
+++ b/cursos/sisinternet.html
@@ -1,13 +1,16 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sistema para Internet</title>
 </head>
+
 <body>
     <h1>Sistema para Internet</h1>
+    <img src="../img/sisinternet.png" alt="Curso sistemas para internet" width="300px">
     <h2>O Curso</h2>
     <p>Pensar de uma forma digital não é mais uma tendência: é uma estratégia de inovação e de geração de negócios. O
         acesso à Internet banda larga aumentou 55% em 2015, totalizando 133,7 milhões de acessos, segundo a Telebrasil.
@@ -23,10 +26,13 @@
         Digital e CyberSecurity.
         No primeiro ano, você já aprende a criar um e-commerce e a atuar como um Web Designer, utilizando os conceitos
         de UX e Design Thinking. Também vai saber como programar Back-end em Java para acessar uma base de dados Oracle
-        ou MySQL. Já no segundo ano, o foco é no desenvolvimento de sistemas de portais corporativos, portais colaborativos
+        ou MySQL. Já no segundo ano, o foco é no desenvolvimento de sistemas de portais corporativos, portais
+        colaborativos
         e apps mobile para as plataformas Android e iOS.
     </p>
 
-    <a href="./si.html">Curso Anterior</a> | <a href="../index.html">Página Inicial</a> | <a href="./redecomp.html" target="_blank">Próximo Curso</a>
+    <a href="./si.html">Curso Anterior</a> | <a href="../index.html">Página Inicial</a> | <a href="./redecomp.html"
+        target="_blank">Próximo Curso</a>
 </body>
+
 </html>
