Adicionado arquivo da pagina dos meus sites favoritos

--- a/index.html
+++ b/index.html
@@ -1,21 +1,24 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cursos FIAP</title>
 </head>
+
 <body>
     <img src="./img/fiap.jpg" alt="Logo FIAP" width="200px">
     <h1>FIAP o novo está aqui</h1>
     <p>A FIAP é o centro de excelência em tecnologia mais respeitado do país. Uma história que vem sendo construída dia
         após dia, estimulando mentes a vivenciarem a inovação e o empreendedorismo. Porque a FIAP acredita no poder
-        transformador da tecnologia. Um poder que, aliado à criatividade, inventa, muda, inquieta. Faz as pessoas buscarem
+        transformador da tecnologia. Um poder que, aliado à criatividade, inventa, muda, inquieta. Faz as pessoas
+        buscarem
         soluções que nunca foram pensadas. Tudo isso para construir um mundo melhor.</p>
     <br>
     <h2>Conheça os Cursos</h2>
-    
+
     <ul>
         <li>
             <a href="./cursos/adm.html" target="_blank">Admistração</a>
@@ -51,5 +54,9 @@
             <a href="./cursos/redecomp.html" target="_blank">Rede de Computadores</a>
         </li>
     </ul>
+    <br>
+    <br>
+    <a href="./favs/favs.html">Meus Sites Favoritos</a>
 </body>
+
 </html>
