Adicionado links e imagens dos meus sites preferidos

--- a/favs/favs.html
+++ b/favs/favs.html
@@ -9,20 +9,70 @@
 </head>
 
 <body>
+    <h1>Meus Sites Favoritos</h1>
+
     <ul>
         <li>
-            <a href="" target="_blank"></a>
-            <a href="" target="_blank"></a>
-            <a href="" target="_blank"></a>
-            <a href="" target="_blank"></a>
-            <a href="" target="_blank"></a>
-            <a href="" target="_blank"></a>
-            <a href="" target="_blank"></a>
-            <a href="" target="_blank"></a>
-            <a href="" target="_blank"></a>
-            <a href="" target="_blank"></a>
+            <a href="https://www.instagram.com/" target="_blank">
+                <img src="../img-favs/Instagram-Icon.png" alt="Instagram" width="50px">
+            </a>
+        </li>
+
+        <li>
+            <a href="https://open.spotify.com/" target="_blank">
+                <img src="../img-favs/spotify.png" alt="Spotify" width="50px">
+            </a>
+        </li>
+
+        <li>
+            <a href="https://www.whatsapp.com/?lang=pt_br" target="_blank">
+                <img src="../img-favs/wpp.png" alt="whatsapp" width="130px">
+            </a>
+        </li>
+
+        <li>
+            <a href="https://www.youtube.com/" target="_blank">
+                <img src="../img-favs/yt.jpg" alt="youtube" width="70px">
+            </a>
+        </li>
+
+        <li>
+            <a href="https://www.reddit.com/" target="_blank">
+                <img src="../img-favs/reddit.png" alt="reddit" width="70px">
+            </a>
+        </li>
+
+        <li>
+            <a href="https://github.com/" target="_blank">
+                <img src="../img-favs/GitHub.png" alt="GitHub" width="70px">
+            </a>
+        </li>
+
+        <li>
+            <a href="https://www.linkedin.com/" target="_blank">
+                <img src="../img-favs/LinkedIn.png" alt="linkedin" width="120px">
+            </a>
+        </li>
+
+        <li>
+            <a href="https://www.hbomax.com/br/pt" target="_blank">
+                <img src="../img-favs/HBO.png" alt="hbomax" width="150px">
+            </a>
+        </li>
+
+        <li>
+            <a href="https://www.netflix.com/br/" target="_blank">
+                <img src="../img-favs/Netflix.png" alt="netflix" width="120px">
+            </a>
+        </li>
+
+        <li>
+            <a href="https://highcompanybr.com/" target="_blank">
+                <img src="../img-favs/high.png" alt="highcompanybr" width="110px">
+            </a>
         </li>
     </ul>
+    <center><a href="../index.html">Página Inicial</a></center>
 </body>
 
 </html>
