--- a/index.html
+++ b/index.html
@@ -54,9 +54,11 @@
             <a href="./cursos/redecomp.html" target="_blank">Rede de Computadores</a>
         </li>
     </ul>
+
     <br>
     <br>
-    <a href="./favs/favs.html">Meus Sites Favoritos</a>
+
+    <a href="./favs/favs.html" target="_blank">Meus Sites Favoritos</a>
 </body>
 
 </html>
